--- a/mydocuments.html
+++ b/mydocuments.html
@@ -221,7 +221,7 @@
        <option value="Wisconsin">Wisconsin</option>
        <option value="Wyoming">Wyoming</option>
      </select>
- <input type="text" class="form-control" placeholder="Zip" style="width:13%;">
+ <input type="text" class="form-control zip" placeholder="Zip">
 </div>
 <div class="form-group">
    <label for="cellphone">Cell Phone</label>
@@ -320,13 +320,13 @@
         <option value="Wisconsin">Wisconsin</option>
         <option value="Wyoming">Wyoming</option>
       </select>
-  <input type="text" class="form-control" placeholder="Zip" style="width:13%;">
+  <input type="text" class="form-control zip" placeholder="Zip">
  </div>
  <div class="form-group">
     <label for="cellphone1">Cell Phone</label>
-  <input type="text" class="form-control" placeholder="" id="cellphone1">
+  <input type="tel" class="form-control" placeholder="" id="cellphone1">
     <label for="alternatephone1">Alternate</label>
-  <input type="text" class="form-control" placeholder="" id="alternatephone1">
+  <input type="tel" class="form-control" placeholder="" id="alternatephone1">
  </div>
  </form>
 </div> <!-- end of nested col-sm-12 -->
@@ -411,7 +411,7 @@
 <option value="Wisconsin">Wisconsin</option>
 <option value="Wyoming">Wyoming</option>
 </select>
-<input type="text" class="form-control"  placeholder="Zip" style="width:13%;">
+<input type="text" class="form-control zip"  placeholder="Zip">
 </div>
 <div class="form-group">
 <label for="cellphone2">Cell Phone</label>
