videmo video added

--- a/mydocuments.html
+++ b/mydocuments.html
@@ -221,7 +221,7 @@
        <option value="Wisconsin">Wisconsin</option>
        <option value="Wyoming">Wyoming</option>
      </select>
- <input type="text" class="form-control zip" placeholder="Zip">
+ <input type="text" class="form-control zip" placeholder="Zip" id="zip1">
 </div>
 <div class="form-group">
    <label for="cellphone">Cell Phone</label>
@@ -320,7 +320,7 @@
         <option value="Wisconsin">Wisconsin</option>
         <option value="Wyoming">Wyoming</option>
       </select>
-  <input type="text" class="form-control zip" placeholder="Zip">
+  <input type="text" class="form-control zip" placeholder="Zip" id="zip2">
  </div>
  <div class="form-group">
     <label for="cellphone1">Cell Phone</label>
@@ -411,7 +411,7 @@
 <option value="Wisconsin">Wisconsin</option>
 <option value="Wyoming">Wyoming</option>
 </select>
-<input type="text" class="form-control zip"  placeholder="Zip">
+<input type="text" class="form-control zip"  placeholder="Zip" id="zip3">
 </div>
 <div class="form-group">
 <label for="cellphone2">Cell Phone</label>
