changed image text size

--- a/mydocuments.html
+++ b/mydocuments.html
@@ -74,7 +74,7 @@
            <a class="nav-link" href="yourplan1.html">Your Plan 1 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Plan 2 <span class="slash"> /</span></a>
+           <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
@@ -89,7 +89,7 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">1 of 5</h5>
-         <p class="text-left">Who is the <span class="hilite">best person</span> to represent
+         <p class="text-left  image-text">Who is the <span class="hilite">best person</span> to represent
   you, if there were a time when you <span class="underline">couldn't make</span> decisions or voice
   your medical preferences?</p>
   </div><!-- end of center block -->
