--- a/yourvalues.html
+++ b/yourvalues.html
@@ -74,7 +74,7 @@
            <a class="nav-link" href="yourplan1.html">Your Plan 1 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Plan 2 <span class="slash"> /</span></a>
+           <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
@@ -89,7 +89,7 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">2 of 5</h5>
-         <p class="text-left">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will
+         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will
   <span class="underline">impact you and your loved ones.</span></p>
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
