--- a/yourplan1.html
+++ b/yourplan1.html
@@ -74,7 +74,7 @@
            <a class="nav-link active" href="yourplan1.html">Your Plan 1 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Plan 2 <span class="slash"> /</span></a>
+           <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
@@ -89,11 +89,11 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">3 of 5</h5>
-         <p class="text-left">If your heart were to stop, what kind of medical treatment would be important to you?</p>
+         <p class="text-left image-text">If your heart were to stop, what kind of medical treatment would be important to you?</p>
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
-           <img src="img/family.jpg" class="header-img" alt="">
+           <img src="img/family.jpg" class="header-img" alt="family pic">
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
@@ -128,12 +128,12 @@
                </span>
                  <h7 class='orange-heading'>If your heart were to stop what kind of medical treatment would be important to you?</h7>
                  <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="healthcarechoice1" value="yes">
-                  <label class="form-check-label" for="healthcarechoice1">I want CRP attempted if my heart stops, even if survival is attempted</label>
+                  <input class="form-check-input" type="checkbox" id="CPRchoice1" value="yes">
+                  <label class="form-check-label" for="CPRchoice1">I want CRP attempted if my heart stops, even if survival is attempted</label>
                  </div>
               <div class="form-check form-check-inline">
-               <input class="form-check-input" type="checkbox" id="healthcarechoice2" value="yes">
-               <label class="form-check-label" for="healthcarechoice2">I want CRP attempted <span style="font-weight:900; text-decoration: underline;">unless</span> my healthcare providers determine that:</label>
+               <input class="form-check-input" type="checkbox" id="CPRchoice2" value="yes">
+               <label class="form-check-label" for="CPRchoice2">I want CRP attempted <span style="font-weight:900; text-decoration: underline;">unless</span> my healthcare providers determine that:</label>
              </div>
                 <p>
                   <ul>
@@ -143,8 +143,8 @@
                   </ul>
                 </p>
                 <div class="form-check form-check-inline">
-                 <input class="form-check-input" type="checkbox" id="healthcarechoice1" value="yes">
-                 <label class="form-check-label" for="healthcarechoice1"><span style="font-weight:900; text-decoration: underline;">I do not</span> want CRP attempted if my heart stops, but rather want to permit natural death.</label>
+                 <input class="form-check-input" type="checkbox" id="CPRchoice3" value="yes">
+                 <label class="form-check-label" for="CPRchoice3"><span style="font-weight:900; text-decoration: underline;">I do not</span> want CRP attempted if my heart stops, but rather want to permit natural death.</label>
                 </div>
               </div> <!-- end of section 1 -->
           </div> <!-- end of nested form-row -->
