--- a/yourplan1.html
+++ b/yourplan1.html
@@ -51,7 +51,9 @@
   </div> <!-- end of col-sm-6 -->
 </div> <!-- end of row -->
 </div><!-- end of container-fluid -->
-
+  <div class="container-fluid" id="nav-line">
+    <div class='row'></div>
+  </div><!-- end of border container -->
   <div class="container-fluid">
    <div class="row">
    <div class="col-sm-12">
@@ -77,7 +79,7 @@
            <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
+           <a class="nav-link" href="yourplan3.html">Your Plan 3 <span class="slash-none"> /</span></a>
          </li>
        </ul>
        </div><!-- end of col-sm-12-->
