--- a/yourplan3.html
+++ b/yourplan3.html
@@ -71,7 +71,7 @@
            <a class="nav-link" href="mydocuments.html">Your Voice <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link active" href="#">Your Values <span class="slash"> /</span></a>
+           <a class="nav-link" href="#">Your Values <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="yourplan1.html">Your Plan 1 <span class="slash"> /</span></a>
@@ -80,7 +80,7 @@
            <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="yourplan3.html">Your Plan 3 <span class="slash-none"> /</span></a>
+           <a class="nav-link active" href="yourplan3.html">Your Plan 3 <span class="slash-none"> /</span></a>
          </li>
        </ul>
        </div><!-- end of col-sm-12-->
@@ -91,31 +91,21 @@
      <div class="row" style="background-color:#a71931">
        <div class="col-sm-6 header-text">
          <div class = "center-block">
-         <h5 class="text-left">2 of 5</h5>
-         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will
-  <span class="underline">impact you and your loved ones.</span></p>
+         <h5 class="text-left">5 of 5</h5>
+         <p class="text-left image-text">If you were suffering from dementia (such as Alzheimer's disease), what would you want your loved ones and medical team to know about your preferences?</p>
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
-           <img src="img/yourvalues.jpg" class="header-img" alt="">
+           <img src="img/lady.jpg" class="header-img" alt="lady">
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
 
-      <div class="container blue-container">
-        <div class="row">
-          <div class="col-sm1-12">
-           <h5 class="blue-container-heading">Choices you would like to make<i class="fa fa-times pull-right"></i></h5>
-           <p>All medical treatment can come with potential benefits (desired outcomes) and potential burdens (unwanted outcomes). Only you can decide
-           what treatment is right for you, based on your goals, personal values, and current health condition.</p>
-         </div> <!-- end of col-sm-12 -->
-         </div> <!-- end of row -->
-        </div> <!-- end of container -->
 
         <div class="container my-voice">
         <div class="row">
       <div class="col-sm-12">
-         <h5 class="voicetext text-left">MY VOICE</h5>
+         <h5 class="voicetext text-left">MY PLAN 3</h5>
         </div><!-- end of col-sm-12 -->
          </div> <!-- end of row -->
           </div> <!-- end of container -->
@@ -131,13 +121,14 @@
 
                    <!-- First section -->
                    <div class="col-sm-12 col-form">
+                      <h6 class="text-left form-heading" >Dementia is a slow progressive illness, and many people find comfort in addressing their possible treatment in advance. Look <a href="#" class="here-link">here</a> and <a href="#" class="here-link">here</a> for additional information and more in-depth planning options.</h6>
                      <span class="fa-stack">
                        <!-- The icon that will wrap the number -->
                          <span class="fa fa-circle fa-stack-2x"></span>
                        <!-- a strong element with the custom content, in this case a number -->
                        <strong class="fa-stack-1x"> 1 </strong>
                    </span>
-                     <h7 class='orange-heading'> When you think about medical care that matters most to you, what is most important to you? <br>(Click on the button to slide left or right.)</h7>
+                     <h7 class='orange-heading'>If you were suffering from dementia, affecting your ability to make or share healthcare decisions, what would matter most to you?</h7>
                      <div class="row">
                        <div class="col-sm-12">
                      <form class="range-field my-4 w-100">
@@ -164,7 +155,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">2</strong>
                     </span>
-                 <h7 class='orange-heading'>If you choose an in-between point in Question 1 above, what does that look like for you?</h7>
+                 <h7 class='orange-heading'>If you choose in-between, what does that look like for you?</h7>
                     <div class="row">
                      <div class="col-sm-12">
                          <input type="text" class="form-control para-answer">
@@ -180,7 +171,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">3</strong>
                     </span>
-                 <h7 class='orange-heading'>What other information or instructions do you want to share with your medical team?</h7>
+                 <h7 class='orange-heading'>If you were to reach the point at which you could not care for yourself, where would you want to receive care?</h7>
                     <div class="row">
                      <div class="col-sm-12">
                          <input type="text" class="form-control para-answer">
@@ -196,7 +187,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">4</strong>
                     </span>
-                 <h7 class='orange-heading'>What matters to you about pain and symptom control?</h7>
+                 <h7 class='orange-heading'>What else do you want your loved ones and healthcare team to know?</h7>
                     <div class="row">
                      <div class="col-sm-12">
                          <input type="text" class="form-control para-answer">
@@ -212,7 +203,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">5</strong>
                     </span>
-                    <h7 class='orange-heading'>Do you have faith or spiritual practices that you want your medical team to know about?</h7>
+                    <h7 class='orange-heading'>Should you no longer be able to eat or swallow independently, would you want forced nutrition through a feeding tube?</h7>
                     <div class="row">
                         <div class="col-sm-12">
                           <div class="form-check form-check-inline">
@@ -223,48 +214,8 @@
                          </div>
                       </div><!-- end of col-sm-12 -->
                       </div> <!-- end of nested row-->
-                      <div class="row">
-                       <div class="col-sm-12">
-                         <p>If yes, how should these practices be applied should you be near death?</p>
-                           <input type="text" class="form-control para-answer">
-                         </div><!-- end of col-sm-12 -->
-                         </div><!-- end of nested row -->
+
                     </div> <!-- end of section 5-->
-
-                  <!-- 6th section -->
-
-                  <div class="col-sm-12 col-form" id="values-section6">
-                    <span class="fa-stack">
-                      <!-- The icon that will wrap the number -->
-                        <span class="fa fa-circle fa-stack-2x"></span>
-                      <!-- a strong element with the custom content, in this case a number -->
-                      <strong class="fa-stack-1x">6</strong>
-                  </span>
-                  <h7 class='orange-heading'>Do you want your medical team or loved ones to attempt to notify your faith or spiritual center?</h7>
-                  <div class="row">
-                            <div class="col-sm-12">
-                              <div class="form-check form-check-inline">
-                               <input class="form-check-input" type="checkbox" id="choice1" value="yes">
-                               <label class="form-check-label" for="choice1">Yes</label>
-                               <input class="form-check-input" type="checkbox" id="choice2" value="yes">
-                               <label class="form-check-label" for="choice2">No</label>
-                             </div>
-                           </div>
-                           </div> <!-- end of nested row-->
-                    <div class="row">
-                     <div class="col-sm-12">
-                       <p>If yes, what are the name and numbed of your congregation, synagogue, or worship group?</p>
-                       <form class="form-inline">
-             <div class="form-group">
-                <label for="name">Name</label>
-             <input type="text" class="form-control">
-                <label for="number">Phone</label>
-             <input type="text" class="form-control">
-           </div>
-         </form>
-                     </div><!-- end of col-sm-12 -->
-                       </div><!-- end of nested row -->
-                  </div> <!-- end of section 6-->
           </div> <!-- end of nested form-row -->
           <!-- button row -->
         </div> <!-- end of col-sm-9-->
@@ -272,16 +223,49 @@
         <!-- Side bar  -->
 
            <div class="col-sm-3">
+             <div class="row nested-row-col3">
+                <div class="col-sm-12 reminder">
+                  <div class="row">
+                    <div class="col-sm-12 reminder-heading">
+                   <h5 class="sub-reminder">IS DEMENTIA A DISEASE OR A SYMPTOM?</h5>
+                   </div><!-- end of col-sm-12 -->
+                   </div><!-- end of row-->
+                   <div class="row">
+                   <div class="col-sm-12 reminder-text">
+                   <p>Dementia is a general term that desribes a group of symptoms and not a specific disease. Dementia affects thinking, reasoning, and can interfere with
+                   a person's ability to care for themselves.</p>
+                   <p>It is not a normal part of aging.</p>
+                     </div><!-- end of col-sm-12 -->
+                     </div><!-- end of row -->
+                  </div><!-- end of col-sm-12-->
+               </div> <!-- end of nested row -->
+               <div class="row nested-row-col3">
+                 <div class="col-sm-12 note">
+                   <div class="row">
+                     <div class="col-sm-12 note-heading">
+                    <h5 class="sub-reminder">ARE ALZHEIMER'S DISEASE AND DEMENTIA THE SAME THING?</h5>
+                    </div><!-- end of col-sm-12 -->
+                    </div><!-- end of row-->
+                    <div class="row">
+                    <div class="col-sm-12 note-text">
+                    <p>Alzheimer's disease is the most commonly diagnosed form of dementia; however it is not the only one.</p>
+                      </div><!-- end of col-sm-12 -->
+                      </div><!-- end of row -->
+                   </div><!-- end of col-sm-12-->
+                 </div> <!-- end of 2nd nested row -->
+
                       <div class="row nested-row-col-3">
                         <div class="col-sm-12 note">
                           <div class="row">
                             <div class="col-sm-12 mind-heading">
-                           <h5 class="sub-reminder">CAN I CHANGE MY MIND?</h5>
+                           <h5 class="sub-reminder">WHY DOES DEMENTIA NEED IT'S OWN PLANNING?</h5>
                            </div><!-- end of col-sm-12 -->
                            </div><!-- end of row-->
                            <div class="row mind1">
                            <div class="col-sm-12 mind-text">
-                           <p>You can change any of the information on this form at any time, simply by logging in and making changes at your convenience.</p>
+                           <p>As dementia progresses, a person may lose the ability to express their healthcare preferences. It is important to think about
+                           what you might want in this situation. If you let your loved ones and healthcare team know your preferences in advance, they won't have to guess,
+                         and you can be assured that you will receive the level of care that is most important to you.</p>
                              </div><!-- end of col-sm-12 -->
                              </div><!-- end of row -->
                           </div><!-- end of col-sm-12-->
