--- a/mydocuments.html
+++ b/mydocuments.html
@@ -51,7 +51,9 @@
  </div> <!-- end of col-sm-5 -->
 </div> <!-- end of row -->
 </div><!-- end of container-fluid -->
-
+<div class="container-fluid" id="nav-line">
+  <div class='row'></div>
+</div><!-- end of border container -->
   <div class="container-fluid">
    <div class="row">
    <div class="col-sm-12">
@@ -77,7 +79,7 @@
            <a class="nav-link" href="yourplan2.html">Your Plan 2 <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
+           <a class="nav-link" href="yourplan3.html">Your Plan 3 <span class="slash-none"> /</span></a>
          </li>
        </ul><!-- end of ul -->
        </div><!-- end of col-sm-12-->
@@ -593,7 +595,7 @@
                      <h5 class="sub-reminder">CAN I CHANGE MY MIND?</h5>
                      </div><!-- end of col-sm-12 -->
                      </div><!-- end of row-->
-                     <div class="row">
+                     <div class="row mind1">
                      <div class="col-sm-12 mind-text">
                      <p>You can change any of the information on this form at any time, simply by logging in and making changes at your convenience.</p>
                        </div><!-- end of col-sm-12 -->
