--- a/yourplan1.html
+++ b/yourplan1.html
@@ -131,7 +131,7 @@
                  <h7 class='orange-heading'>If your heart were to stop what kind of medical treatment would be important to you?</h7>
                  <div class="form-check form-check-inline">
                   <input class="form-check-input" type="checkbox" id="CPRchoice1" value="yes">
-                  <label class="form-check-label" for="CPRchoice1">I want CRP attempted if my heart stops, even if survival is attempted</label>
+                  <label class="form-check-label" for="CPRchoice1">I want CRP attempted if my heart stops, even if survival is unlikely.</label>
                  </div>
               <div class="form-check form-check-inline">
                <input class="form-check-input" type="checkbox" id="CPRchoice2" value="yes">
@@ -141,7 +141,7 @@
                   <ul>
                   <li class="plan1-bullet">I have an incurable disease, injury or am dying</li>
                   <p style="font-weight:900; margin-left:10%">-OR-</p>
-                 <li class="plan1-bullet"> I have little or no chance of survival if my heart stops and the process of resucitation would cause significant suffering</li>
+                 <li class="plan1-bullet"> I have little or no chance of long-term survival if my heart stops and the process of resuscitation would cause significant suffering</li>
                   </ul>
                 </p>
                 <div class="form-check form-check-inline">
