--- a/yourplan2.html
+++ b/yourplan2.html
@@ -103,7 +103,7 @@
         <div class="container my-voice">
         <div class="row">
       <div class="col-sm-12">
-         <h5 class="voicetext text-left">MY PLAN 1</h5>
+         <h5 class="voicetext text-left">MY PLAN 2</h5>
         </div><!-- end of col-sm-12 -->
          </div> <!-- end of row -->
           </div> <!-- end of container -->
@@ -128,14 +128,14 @@
                    <!-- a strong element with the custom content, in this case a number -->
                    <strong class="fa-stack-1x">1</strong>
                </span>
-                 <h7 class='orange-heading'>Should you reach a point where it is likely you will not recover your ability to interact meaningfully with your family, friends, and enviornment, what would you want your medical team to do?</h7>
+                 <h7 class='orange-heading'>Should you reach a point where it is likely you will not recover your ability to interact meaningfully with your family, friends, and environment, what would you want your medical team to do?</h7>
                  <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="CPRchoice1" value="yes">
-                  <label class="form-check-label" for="CPRchoice1">Other than comfort care, I want to stop or withhold all treatments, that might be used to prolong my existence. Treatments I would not want if I were to reach this point include, but are not limited to, tube feeding, IV hydration, respirator/ventilation, and antibiotics</label>
+                  <input class="form-check-input" type="checkbox" id="Dochoice1" value="yes">
+                  <label class="form-check-label" for="Dochoice1">Other than comfort care, I want to stop or withhold all treatments, that might be used to prolong my existence. Treatments I would not want if I were to reach this point include, but are not limited to, tube feeding, IV hydration, respirator/ventilation, and antibiotics.</label>
                  </div>
               <div class="form-check form-check-inline">
-               <input class="form-check-input" type="checkbox" id="CPRchoice2" value="yes">
-               <label class="form-check-label" for="CPRchoice2">Try all available treatments to extend my life, and continue them even if there is no real chance of recovering, including but not limited to tube feeding, IV hydration, respirator/ventilator and antibiotics.</label>
+               <input class="form-check-input" type="checkbox" id=Dochoice2" value="yes">
+               <label class="form-check-label" for="Dochoice2">Try all available treatments to extend my life, and continue them even if there is no real chance of recovering, including but not limited to tube feeding, IV hydration, respirator/ventilator and antibiotics.</label>
              </div>
               </div> <!-- end of section 1 -->
           </div> <!-- end of nested form-row -->
