--- a/yourplan3.html
+++ b/yourplan3.html
@@ -155,7 +155,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">2</strong>
                     </span>
-                 <h7 class='orange-heading'>If you choose in-between, what does that look like for you?</h7>
+                 <h7 class='orange-heading'>If you choose something in-between, what does that look like for you?</h7>
                     <div class="row">
                      <div class="col-sm-12">
                          <input type="text" class="form-control para-answer">
@@ -196,7 +196,7 @@
                     </div> <!-- end of section 4-->
 
                     <!-- 5th section -->
-                    <div class="col-sm-12 col-form">
+                    <div class="col-sm-12 col-form" id="plan3-section5">
                       <span class="fa-stack">
                         <!-- The icon that will wrap the number -->
                           <span class="fa fa-circle fa-stack-2x"></span>
@@ -207,14 +207,13 @@
                     <div class="row">
                         <div class="col-sm-12">
                           <div class="form-check form-check-inline">
-                           <input class="form-check-input" type="checkbox" id="choice1" value="yes">
+                           <input class="form-check-input" type="checkbox" id="choice-a" value="yes">
                            <label class="form-check-label" for="choice1">Yes</label>
-                           <input class="form-check-input" type="checkbox" id="choice2" value="yes">
+                           <input class="form-check-input" type="checkbox" id="choice-b" value="yes">
                            <label class="form-check-label" for="choice2">No</label>
                          </div>
                       </div><!-- end of col-sm-12 -->
                       </div> <!-- end of nested row-->
-
                     </div> <!-- end of section 5-->
           </div> <!-- end of nested form-row -->
           <!-- button row -->
