--- a/yourvalues(1).html
+++ b/yourvalues(1).html
@@ -92,8 +92,8 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">2 of 5</h5>
-         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will
-  <span class="underline">impact you and your loved ones.</span></p>
+         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="underline">choices you would like to make</span> and how they will
+  <span class="hilite">impact you and your loved ones.</span></p>
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
@@ -104,10 +104,14 @@
 
       <div class="container blue-container">
         <div class="row">
+          <div class="col-sm-12">
+            <i class="fa fa-times pull-right" style="margin-left:90%"></i>
+          </div>
+        </div>
+          <div class="row">
           <div class="col-sm1-12">
-           <h5 class="blue-container-heading">Choices you would like to make<i class="fa fa-times pull-right"></i></h5>
-           <p>All medical treatment can come with potential benefits (desired outcomes) and potential burdens (unwanted outcomes). Only you can decide
-           what treatment is right for you, based on your goals, personal values, and current health condition.</p>
+           <h5 class="blue-container-heading">Impact You and Your Loved Ones</h5>
+           <p>Giving specific instructions about your healthcare choices helps those close to you know what type of care you want or do not want.</p>
          </div> <!-- end of col-sm-12 -->
          </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -281,7 +285,7 @@
                            </div><!-- end of row-->
                            <div class="row mind1">
                            <div class="col-sm-12 mind-text">
-                           <p>You can change any of the information on this form at any time. Simply log in in and making changes at your convenience.</p>
+                           <p>You can change any of the information on this form at any time. Simply log in and making changes at your convenience.</p>
                              </div><!-- end of col-sm-12 -->
                              </div><!-- end of row -->
                           </div><!-- end of col-sm-12-->
