--- a/mydocuments(2).html
+++ b/mydocuments(2).html
@@ -91,7 +91,7 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">1 of 5</h5>
-         <p class="text-left  image-text">Who is the <span class="hilite">best person</span> to represent
+         <p class="text-left  image-text">Who is the <span class="underline">best person</span> to represent
   you, if there were a time when you <span class="underline">couldn't make</span> decisions or voice
   your medical preferences?</p>
   </div><!-- end of center block -->
@@ -102,23 +102,6 @@
            </div> <!-- end of row -->
       </div> <!-- end of header pic container -->
 
-      <div class="container blue-container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h5 class="text-left blue-container-heading">Best Person<i class="fa fa-times pull-right"></i></h5>
-              <p class="blue-container-text text-left">What does "best person" mean? It means that you should select the person or people who will support the choices you make throughout this document.</p>
-              <ul class="blue-container-text text-left">
-              <li class="blue-container-text">For some people, that person os a family member. Others may think family members are too emotionally involved, so they would rather choose a friend or other loved one.</li>
-              <li class="blue-container-text">Your healthcare decision maker <span class="white-span">cannot</span> be:
-                    <ul class="blue-container-text">
-                    <li class="blue-container-text">Under the age of 18</li>
-                    <li class="blue-container-text">An employee or owner of a health or residential facility where you live, or a member of your medical team, unless they are related to you.</li>
-                  </ul><!-- end of nested ul-->
-                </li>
-              </ul><!--end of ul -->
-         </div> <!-- end of col-sm-12 -->
-         </div> <!-- end of row -->
-        </div> <!-- end of container -->
 
         <div class="container my-voice">
         <div class="row">
@@ -134,7 +117,19 @@
               <!-- start of main col-sm-9 -->
               <div class="col-sm-9">
            <h6 class="text-left form-heading" >Tell us who is allowed to make medical decisions for you.</h6>
-           <h6 class="text-left form-heading">That person will be your  <span id="decision">healthcare decision maker.</span></h6>
+           <h6 class="text-left form-heading">That person will be your  <span style="background-color: #00759a; color:#FFFFFF;">healthcare decision maker.</span></h6>
+
+ <!-- container inside a container, yes it works -->
+           <div class="container blue-container">
+             <div class="row">
+               <div class="col-sm-12">
+                 <h5 class="text-left blue-container-heading">Healthcare Decision Maker<i class="fa fa-times pull-right"></i></h5>
+                   <p class="blue-container-text text-left">A healthcare decision maker is a person or persons whom you have authorized to share your  healthcare preferences and/or make  medical decisons on your behalf, in the event
+                   that you cannot make or voice your own decisions. For some people this could be a family member. For others, a family member may not be the best choice.
+                 Only you can decide.</p>
+              </div> <!-- end of col-sm-12 -->
+              </div> <!-- end of row -->
+             </div> <!-- end of container -->
            <!-- start of nested row -->
            <div class="row" id="nested-form-row">
 
@@ -246,7 +241,7 @@
                      2
                  </strong>
              </span>
-              <h7 class="orange-heading">Choose upto two more alternate healthcare decision makers.</h7>
+              <h7 class="orange-heading">Choose upto two more alternate healthcare decision makers</h7>
               <p class="alternate-heading">FIRST ALTERNATE</p>
               <form class="form-inline">
     <div class="form-group">
@@ -460,7 +455,7 @@
    <div class="form-check form-check-inline">
     <input class="form-check-input" type="checkbox" id="healthcarechoice1" value="yes">
     <label class="form-check-label" for="healthcarechoice1">When my primary or attending physician and one other licensed member of my medical team determine that I do not have the capacity to appreciate the risks and
-  benefits of medical treatement. I understand that if my capacity returns, I will make my own medical care decisions.</label>
+  benefits of medical treatement. I understand that if my capacity returns, I will make my own medical decisions.</label>
    </div>
 
 <p style="font-weight:900; margin-left:10%">-OR-</p>
@@ -484,7 +479,7 @@
         <!-- a strong element with the custom content, in this case a number -->
         <strong class="fa-stack-1x">5</strong>
     </span>
-   <h7 class='orange-heading'> Are there limitations on the decisons your healthcare decision maker(s) can make for you?</h7>
+   <h7 class='orange-heading'> Are there limitations on the healthcare decision maker(s) can make for you?</h7>
     <div class="row">
       <div class="col-sm-12">
         <div class="form-check form-check-inline">
@@ -504,7 +499,7 @@
   </div><!-- end of col-sm-6 -->
   <div class="col-sm-6">
     <ul>
-  <li>Orders not to resuscitate (DNR)</li>
+      <li>Orders not to resuscitate (DNR)</li>
   <li>Life-saving and life-prolonging medical treatment</li>
   <li>The giving or removing or artificial nutrition and  hydration</li>
 </ul>
@@ -518,7 +513,7 @@
    </div>
     <form class="form-inline">
       <div class="form-group">
-      <label for="limitationslist" id="limitationslist-label">Please list any specific limitations here:</label>
+      <label for="limitationslist" id="limitationslist-label">List here:</label>
       <input type="text" class="form-control" id="limitationslist">
       </div>
  </form>
@@ -536,7 +531,6 @@
     <strong class="fa-stack-1x">6</strong>
 </span>
 <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after your death?</h7>
-
 <div class="row">
   <div class="col-sm-12">
     <div class="form-check form-check-inline">
@@ -550,7 +544,7 @@
      <div class="form-group">
      <input type="text" class="form-control" id="peoplelist">
      </div>
-   </form>
+</form>
 </div><!-- end of col-sm-12-->
 </div><!-- end of nested row -->
 
