--- a/mydocuments(3).html
+++ b/mydocuments(3).html
@@ -91,7 +91,7 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">1 of 5</h5>
-         <p class="text-left  image-text">Who is the <span class="hilite">best person</span> to represent
+         <p class="text-left  image-text">Who is the <span class="underline">best person</span> to represent
   you, if there were a time when you <span class="underline">couldn't make</span> decisions or voice
   your medical preferences?</p>
   </div><!-- end of center block -->
@@ -101,24 +101,6 @@
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of header pic container -->
-
-      <div class="container blue-container">
-        <div class="row">
-          <div class="col-sm-12">
-            <h5 class="text-left blue-container-heading">Best Person<i class="fa fa-times pull-right"></i></h5>
-              <p class="blue-container-text text-left">What does "best person" mean? It means that you should select the person or people who will support the choices you make throughout this document.</p>
-              <ul class="blue-container-text text-left">
-              <li class="blue-container-text">For some people, that person os a family member. Others may think family members are too emotionally involved, so they would rather choose a friend or other loved one.</li>
-              <li class="blue-container-text">Your healthcare decision maker <span class="white-span">cannot</span> be:
-                    <ul class="blue-container-text">
-                    <li class="blue-container-text">Under the age of 18</li>
-                    <li class="blue-container-text">An employee or owner of a health or residential facility where you live, or a member of your medical team, unless they are related to you.</li>
-                  </ul><!-- end of nested ul-->
-                </li>
-              </ul><!--end of ul -->
-         </div> <!-- end of col-sm-12 -->
-         </div> <!-- end of row -->
-        </div> <!-- end of container -->
 
         <div class="container my-voice">
         <div class="row">
@@ -246,7 +228,7 @@
                      2
                  </strong>
              </span>
-              <h7 class="orange-heading">Choose upto two more alternate healthcare decision makers.</h7>
+              <h7 class="orange-heading">Choose upto two more alternate healthcare decision makers</h7>
               <p class="alternate-heading">FIRST ALTERNATE</p>
               <form class="form-inline">
     <div class="form-group">
@@ -449,7 +431,7 @@
     ------------------------------------------ -->
 
     <div class="col-sm-12 col-form" id="section 4">
-   <h5 class="text-left form-heading">When do you want your healthcare decision maker to make decisons, and what decisions do you want them to make?</h5>
+   <h56 class="text-left form-heading">When do you want your healthcare decision maker to make decisons, and what decisions do you want them to make?</h5>
    <span class="fa-stack">
      <!-- The icon that will wrap the number -->
        <span class="fa fa-circle fa-stack-2x"></span>
@@ -460,7 +442,7 @@
    <div class="form-check form-check-inline">
     <input class="form-check-input" type="checkbox" id="healthcarechoice1" value="yes">
     <label class="form-check-label" for="healthcarechoice1">When my primary or attending physician and one other licensed member of my medical team determine that I do not have the capacity to appreciate the risks and
-  benefits of medical treatement. I understand that if my capacity returns, I will make my own medical care decisions.</label>
+  benefits of medical treatement. I understand that if my capacity returns, I will make my own medical decisions.</label>
    </div>
 
 <p style="font-weight:900; margin-left:10%">-OR-</p>
@@ -484,7 +466,7 @@
         <!-- a strong element with the custom content, in this case a number -->
         <strong class="fa-stack-1x">5</strong>
     </span>
-   <h7 class='orange-heading'> Are there limitations on the decisons your healthcare decision maker(s) can make for you?</h7>
+   <h7 class='orange-heading'> Are there limitations on the healthcare decision maker(s) can make for you?</h7>
     <div class="row">
       <div class="col-sm-12">
         <div class="form-check form-check-inline">
@@ -504,7 +486,7 @@
   </div><!-- end of col-sm-6 -->
   <div class="col-sm-6">
     <ul>
-  <li>Orders not to resuscitate (DNR)</li>
+      <li>Orders not to resuscitate (DNR)</li>
   <li>Life-saving and life-prolonging medical treatment</li>
   <li>The giving or removing or artificial nutrition and  hydration</li>
 </ul>
@@ -536,7 +518,6 @@
     <strong class="fa-stack-1x">6</strong>
 </span>
 <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after your death?</h7>
-
 <div class="row">
   <div class="col-sm-12">
     <div class="form-check form-check-inline">
@@ -550,7 +531,7 @@
      <div class="form-group">
      <input type="text" class="form-control" id="peoplelist">
      </div>
-   </form>
+</form>
 </div><!-- end of col-sm-12-->
 </div><!-- end of nested row -->
 
