--- a/myvalues(2).html
+++ b/myvalues(2).html
@@ -92,7 +92,7 @@
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">2 of 5</h5>
-         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will
+         <p class="text-left image-text">What does quality of life mean to you? This is a very personal question. Think about the <span class="underline">choices you would like to make</span> and how they will
   <span class="underline">impact you and your loved ones.</span></p>
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
@@ -101,16 +101,6 @@
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
-
-      <div class="container blue-container">
-        <div class="row">
-          <div class="col-sm1-12">
-           <h5 class="blue-container-heading">Choices you would like to make<i class="fa fa-times pull-right"></i></h5>
-           <p>All medical treatment can come with potential benefits (desired outcomes) and potential burdens (unwanted outcomes). Only you can decide
-           what treatment is right for you, based on your goals, personal values, and current health condition.</p>
-         </div> <!-- end of col-sm-12 -->
-         </div> <!-- end of row -->
-        </div> <!-- end of container -->
 
         <div class="container my-voice">
         <div class="row">
@@ -281,7 +271,7 @@
                            </div><!-- end of row-->
                            <div class="row mind1">
                            <div class="col-sm-12 mind-text">
-                           <p>You can change any of the information on this form at any time. Simply log in in and making changes at your convenience.</p>
+                           <p>You can change any of the information on this form at any time. Simply log in and making changes at your convenience.</p>
                              </div><!-- end of col-sm-12 -->
                              </div><!-- end of row -->
                           </div><!-- end of col-sm-12-->
